# advent-of-code

./: .gitignore  LICENSE  README.md  pyproject.toml
2020/day15/: solution.py
2020/day16/: solution.py
2020/day17/: solution.py
2020/day19/: solution.py
2020/day3/: solution.py
2020/day8/: solution.py
2020/day9/: solution.py
2021/day1/: solution.py
2021/day10/: solution.py
2021/day11/: solution.py
2021/day12/: solution.py
2021/day13/: solution.py
2021/day14/: solution.py
2021/day15/: solution.py
2021/day2/: solution.py
2021/day3/: solution.py
2021/day4/: solution.py
2021/day5/: solution.py
2021/day6/: solution.py
2021/day7/: solution.py
2021/day8/: solution.py
2021/day9/: solution.py
2022/day1/: input_parser.py  part1.py  part2.py
2022/day2/: input_parser.py  part1.py  part2.py
2022/day3/: input_parser.py  part1.py  part2.py
2022/day4/: input_parser.py  part1.py  part2.py
2023/day1/: parser.py  part1.py  part2.py
2024/: pyproject.toml
2024/daily-template/: solution.py
2024/day-1/: build.zig  build.zig.zon  solution.py
2024/day-2/: solution.py
2024/day-3/: solution.py
2024/day-4/: solution.py
2024/day-5/: solution.py
2024/day-7/: solution.py
day1/: solution.py
day10/: solution.py
day11/: solution_part_1.py  solution_part_2.py
day12/: solution.py
day13/: solution.py
day14/: solution.py
day17/: solution_4d.py
day18/: solution_a.py  solution_b.py
day2/: solution.py
day3/: solution.py
day4/: solution.py
day5/: solution.py
day6/: solution.py
day7/: solution.py
(+1 files in other folders)
