[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = "My Advent of Code challenge solutions for 2020. I'll be using Python 3.9 for all of my solutions."
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
parse = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
